<resources>
    <string name="app_name">Exercise Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="create_exercise">Create Exercise</string>
    <string name="cancel">Cancel</string>
    <string name="exercise_creator">Exercise Creator</string>
    <string name="example">Example</string>
    <string name="description_text">Description Text</string>
    <string name="edit_exercise">Edit Exercise</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="exercise_description">Exercise Description</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="exercises">Exercises</string>
    <string name="muscles">Muscles</string>
    <string name="workouts">Workouts</string>
    <string name="reset_database">Reset Database</string>
    <string name="add_muscle">Add Muscle</string>
    <string name="muscle_name">Muscle Name</string>
    <string name="edit_muscle">Edit Muscle</string>
    <string name="groups">Groups</string>
    <string name="todo">TODO</string>
    <string name="description">Description</string>
    <string name="group_name">Group Name</string>
    <string name="add">ADD</string>
    <string name="save">SAVE</string>
    <string name="select_exercise">Select Exercise</string>
    <string name="empty">Empty</string>
    <string name="pattern_type">Pattern type:</string>
    <string name="pattern_length">Pattern length</string>
    <string name="pattern">Pattern</string>
    <string name="starting_date">Starting date</string>
    <string name="save_schedule">Save Schedule</string>
    <string name="delete_schedule">Delete schedule</string>
    <string name="filter_and_sort">Filter and sort</string>
    <string name="order">Order</string>
    <string name="include">Include</string>
    <string name="target_muscles">Target muscles</string>
    <string name="alphabetic_order">Alphabetic order</string>
    <string name="order_by_type">Order by type</string>
    <string name="guide">Guide</string>
    <string name="_1_creating_exercises">1) Creating Exercises</string>
    <string name="guide_subtext_1">a) Navigate to Exercises tab.\n b) Press blue plus, and type in name and description.\n c)Add muscles that the exercise targets, and press the blue checkmark. That\'s it!</string>
    <string name="guide_title_2">2) Creating Groups</string>
    <string name="guide_subtext_2">a) Navigate to Groups tab.\n b) Press blue plus, and type in name and description.\n c)Add exercises by pressing the blue plus, and press the blue save button. And that is the truth.</string>
    <string name="guide_title_3">3) Creating Schedules</string>
    <string name="guide_subtext_3">a) Navigate to Home tab. The app starts on it.\n b) Navigate to Scheduler by pressing the tab name or by swiping right. Press the blue plus button.\n c) Select pattern type. Pattern pattern type is a certain repeatable order of days where the exercises and groups will be scheduled. Weekly is the same, but the length is bound to seven. Schedule example: Day 1 - Push up, Day 2 - Rest, Day 3 - Push up.\n d) Starting date is when the pattern begins. You can set it to any date.\n e) Add groups and exercises with the blue button, and save the schedule.</string>
    <string name="guide_title_4">4) Using Schedules</string>
    <string name="guide_subtext_4">a) Navigate to Home tab. The app starts on it.\n b) Here all scheduled exercises and groups will be displayed. You can sort them.\n c) Select the filter and sort categories, and press the blue checkmark.</string>

    <string-array name="muscle_list">
        <item>Biceps</item>
        <item>Middle Back</item>
        <item>Upper Chest</item>
        <item>Lower Chest</item>
        <item>Mid Chest</item>
        <item>Triceps</item>
        <item>Abs</item>
        <item>Erectus Pinae</item>
        <item>Front Delts</item>
        <item>Side Delts</item>
        <item>Back Delts</item>
    </string-array>

    <string-array name="pattern_type_list">
        <item>Pattern</item>
        <item>Weekly</item>
        <item>Date</item>
    </string-array>

    <string-array name="list_order">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>

    <string-array name="list_type_order">
        <item>Mixed</item>
        <item>Exercises first</item>
        <item>Groups first</item>
    </string-array>

    <string-array name="list_included">
        <item>All</item>
        <item>Exercises</item>
        <item>Groups</item>
    </string-array>

    <string-array name="type_order_exercises">
        <item>Exercises first</item>
    </string-array>

    <string-array name="type_order_groups">
        <item>Groups first</item>
    </string-array>
</resources>