<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_exercises"
            android:icon="@drawable/ic_exercise"
            android:title="@string/exercises" />
        <item
            android:id="@+id/nav_muscles"
            android:icon="@drawable/ic_muscle"
            android:title="@string/muscles" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/groups" />
        <item
            android:id="@+id/nav_guide"
            android:icon="@drawable/ic_guide"
            android:title="@string/guide" />
    </group>
</menu>