<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.exercisemanager.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_exercises"
        android:name="com.example.exercisemanager.ui.exercises.ExercisesFragment"
        android:label="@string/exercises"
        tools:layout="@layout/fragment_exercises" />
    <fragment
        android:id="@+id/nav_muscles"
        android:name="com.example.exercisemanager.ui.muscles.MusclesFragment"
        android:label="@string/muscles"
        tools:layout="@layout/fragment_muscles" />
    <fragment
        android:id="@+id/nav_groups"
        android:name="com.example.exercisemanager.ui.groups.GroupsFragment"
        android:label="Groups"
        tools:layout="@layout/fragment_groups" />
</navigation>